--- a/XTB/Runner/ShuffleRunner.resx
+++ b/XTB/Runner/ShuffleRunner.resx
@@ -125,24 +125,24 @@
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
         ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAC0
-        KAAAAk1TRnQBSQFMAwEBAAFAAQABQAEAAVABAAFQAQAE/wEhAQAI/wFCAU0BNgcAATYDAAEoAwABQAEB
-        AgABUAMAAQEBAAEgBgABkAEB/wD/AP8A/wD/ALYAA0YBgAM5AWD/AP8A/wD/APgAA0sBjwMAAf8DPAHv
+        KAAAAk1TRnQBSQFMAwEBAAFIAQABSAEAAVABAAFQAQAE/wEhAQAI/wFCAU0BNgcAATYDAAEoAwABQAEB
+        AgABUAMAAQEBAAEgBgABkAEB/wD/AP8A/wD/ALYAA0YBgAM5AWD/AP8A/wD/APgAA0sBjwMAAf8DPwHv
         AzkBYP8A/wD/AP8A8AADRgGAAwAB/wMAAf8DAAH/AwAB/wMqAUD/AP8A/wD/AOgAA0ABcAMAAf8DAAH/
         AwAB/wMAAf8DAAH/AwAB/wMqAUD/AP8A/wD/AOAAA0YBgAMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMA
         Af8DAAH/AzkBYP8A/wD/AP8A2AADSwGPAwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/
-        AzwB7wM5AWD/AP8A/wD/ANAAA0YBgAMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMA
+        Az8B7wM5AWD/AP8A/wD/ANAAA0YBgAMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMA
         Af8DAAH/AwAB/wMqAUD/AP8A/wD/AMgAA0ABcAMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/
         AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AyoBQP8A/wD/AP8AwAADRgGAAwAB/wMAAf8DAAH/AwAB/wMA
         Af8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wM5AWD/AP8A/wD/ALgA
         A0sBjwMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/
-        AwAB/wMAAf8DAAH/AzwB7wM5AWD/AP8A/wD/ALAAA0YBgAMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMA
+        AwAB/wMAAf8DAAH/Az8B7wM5AWD/AP8A/wD/ALAAA0YBgAMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMA
         Af8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AyoBQP8A
         /wD/AP8AqAADQAFwAwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/
         AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMqAUD/AP8A/wD/AKAAA0YBgAMA
         Af8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMA
         Af8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wM5AWD/AP8A/wD/AJgAA0sBjwMAAf8DAAH/
         AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/
-        AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DPAHvAzkBYP8A/wD/AP8AkAADRgGAAwAB/wMA
+        AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DPwHvAzkBYP8A/wD/AP8AkAADRgGAAwAB/wMA
         Af8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMA
         Af8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMqAUD/AP8A/wD/AIgA
         A0ABcAMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/
@@ -152,7 +152,7 @@
         Af8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AzkBYP8A/wD/AP8AeAADSwGPAwAB/wMAAf8DAAH/
         AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/
         AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/
-        AzwB7wM5AWD/AP8A/wD/AHAAA0YBgAMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMA
+        Az8B7wM5AWD/AP8A/wD/AHAAA0YBgAMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMA
         Af8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMA
         Af8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMqAUD/AP8A/wD/AGgA
         A0ABcAMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/
@@ -160,16 +160,16 @@
         AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AyoBQP8A/wD/AP8AYAADRgSAAf8DgAH/
         A4AB/wOAAf8DgAH/A4AB/wOAAf8DgAH/A4AB/wOAAf8DgAH/A4AB/wOAAf8DgAH/A4AB/wOAAf8DgAH/
         A4AB/wOAAf8DgAH/A4AB/wOAAf8DgAH/A4AB/wOAAf8DgAH/A4AB/wOAAf8DgAH/A4AB/wOAAf8DgAH/
-        A4AB/wOAAf8DgAH/A4AB/wOAAf8DgAH/A4AB/wOAAf8DOQFg/wD/AP8A/wBYAANLAY8DAKH/AzwB7wM5
+        A4AB/wOAAf8DgAH/A4AB/wOAAf8DgAH/A4AB/wOAAf8DOQFg/wD/AP8A/wBYAANLAY8DAKH/Az8B7wM5
         AWD/AP8A/wD/AFAAA0YBgAMAAf8DAKH/AwAB/wMAAf8DKgFA/wD/AP8A/wBIAANAAXADAAH/AwAB/wMA
         of8DAAH/AwAB/wMAAf8DKgFA/wD/AP8A/wBAAANGAYADAAH/AwAB/wMAAf8DAKH/AwAB/wMAAf8DAAH/
-        AwAB/wM5AWD/AP8A/wD/ADgAA0sBjwMAAf8DAAH/AwAB/wMAAf8DAKH/AwAB/wMAAf8DAAH/AwAB/wM8
+        AwAB/wM5AWD/AP8A/wD/ADgAA0sBjwMAAf8DAAH/AwAB/wMAAf8DAKH/AwAB/wMAAf8DAAH/AwAB/wM/
         Ae8DOQFg/wD/AP8A/wAwAANGAYADAAH/AwAB/wMAAf8DAAH/AwAB/wMAof8DAAH/AwAB/wMAAf8DAAH/
         AwAB/wMAAf8DKgFA/wD/AP8A/wAoAANAAXADAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAKH/AwAB/wMA
         Af8DAAH/AwAB/wMAAf8DAAH/AwAB/wMqAUD/AP8A/wD/ACAAA0YBgAMAAf8DAAH/AwAB/wMAAf8DAAH/
         AwAB/wMAAf8DAKH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DOQFg/wD/AP8A/wAYAANL
         AY8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAof8DAAH/AwAB/wMAAf8DAAH/AwAB/wMA
-        Af8DAAH/AwAB/wM8Ae8DOQFg/wD/AP8A/wAQAANGAYADAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/
+        Af8DAAH/AwAB/wM/Ae8DOQFg/wD/AP8A/wAQAANGAYADAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/
         AwAB/wMAAf8DAKH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMqAUD/AP8A
         /wD/AAgAA0ABcAMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAC3/A78B/wO/
         Af8DvwH/A78B/wO/Af8DvwH/A78B/wO/Af8DvwH/A78B/wO/Af8DvwH/A78B/wO/Af8DvwH/A78B/wO/
@@ -182,7 +182,7 @@
         Af8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAC3/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMA
         Af8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMA
         Af8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMA
-        Af8DAAH/AwAB/wMAAf8DPAHvAzkBYP8A/wD/AO8AA0YBgAMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMA
+        Af8DAAH/AwAB/wMAAf8DPwHvAzkBYP8A/wD/AO8AA0YBgAMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMA
         Af8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAC3/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMA
         Af8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMA
         Af8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMA
@@ -199,16 +199,16 @@
         Af8DAAH/AwAB/wMAAf8DAC3/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMA
         Af8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMA
         Af8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMA
-        Af8DAAH/AwAB/wMAAf8DAAH/AzwB7wM5AWD/AP8A/wDPAANGAYADAAH/AwAB/wMAAf8DAAH/AwAB/wMA
+        Af8DAAH/AwAB/wMAAf8DAAH/Az8B7wM5AWD/AP8A/wDPAANGAYADAAH/AwAB/wMAAf8DAAH/AwAB/wMA
         Af8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMALf8DAAH/AwAB/wMA
         Af8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMA
         Af8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMA
         Af8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMq
-        AUD/AP8A/wDHAAMhATADUQHfAwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMA
+        AUD/AP8A/wDHAAMhATADVAHfAwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMA
         Af8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAC3/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMA
         Af8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMA
         Af8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMA
-        Af8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DWQHP/wD/AP8AywADKgFAA1EB3wMA
+        Af8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DWQHP/wD/AP8AywADKgFAA1QB3wMA
         Af8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMA
         Af8DAC3/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMA
         Af8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMA
@@ -222,11 +222,11 @@
         AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/
         AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/
         AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf//AP8A
-        /wDjAAMhATADUQHfAwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/
+        /wDjAAMhATADVAHfAwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/
         AwAB/wMALf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/
         AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/
         AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/
-        A1kBz/8A/wD/AOsAAyoBQANRAd8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/
+        A1kBz/8A/wD/AOsAAyoBQANUAd8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/
         AwAB/wMAAf8DAC3/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/
         AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/
         AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/
@@ -237,53 +237,53 @@
         AxcBIP8A/wD/AP4AAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAt/wMA
         Af8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMA
         Af8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMA
-        Af8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH//wD/AP8A/wAEAAMhATADUQHf
-        AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAt/wM4Af8DOAH/AzgB/wM4Af8DOAH/
-        AzgB/wM4Af8DOAH/AzgB/wM4Af8DOAH/AzgB/wM4Af8DOAH/AzgB/wM4Af8DOAH/AzgB/wM4Af8DOAH/
-        AzgB/wM4Af8DOAH/AzgB/wM4Af8DOAH/AzgB/wM4Af8DOAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/
-        AwAB/wMAAf8DAAH/AwAB/wNZAc//AP8A/wD/AAwAAyoBQANRAd8DAAH/AwAB/wMAAf8DAAH/AwAB/wMA
+        Af8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH//wD/AP8A/wAEAAMhATADVAHf
+        AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAt/wM3Af8DNwH/AzcB/wM3Af8DNwH/
+        AzcB/wM3Af8DNwH/AzcB/wM3Af8DNwH/AzcB/wM3Af8DNwH/AzcB/wM3Af8DNwH/AzcB/wM3Af8DNwH/
+        AzcB/wM3Af8DNwH/AzcB/wM3Af8DNwH/AzcB/wM3Af8DNwH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/
+        AwAB/wMAAf8DAAH/AwAB/wNZAc//AP8A/wD/AAwAAyoBQANUAd8DAAH/AwAB/wMAAf8DAAH/AwAB/wMA
         Af8DAAH/AwAB/wMAof8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DWAHAAxcBIP8A
         /wD/AP8AEAADIQEwAwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAKH/AwAB/wMAAf8DAAH/
         AwAB/wMAAf8DAAH/AwAB/wMAAf8DWQHPAxcBIP8A/wD/AP8AHwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/
-        AwAB/wMAof8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB//8A/wD/AP8AJAADIQEwA1EB3wMA
+        AwAB/wMAof8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB//8A/wD/AP8AJAADIQEwA1QB3wMA
         Af8DAAH/AwAB/wMAAf8DAAH/AwCh/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wNZAc//AP8A/wD/ACwA
-        AyoBQANRAd8DAAH/AwAB/wMAAf8DAAH/AwCh/wMAAf8DAAH/AwAB/wMAAf8DAAH/A1gBwAMXASD/AP8A
+        AyoBQANUAd8DAAH/AwAB/wMAAf8DAAH/AwCh/wMAAf8DAAH/AwAB/wMAAf8DAAH/A1gBwAMXASD/AP8A
         /wD/ADAAAyEBMAMAAf8DAAH/AwAB/wMAAf8DAKH/AwAB/wMAAf8DAAH/AwAB/wNZAc8DFwEg/wD/AP8A
-        /wA/AAH/AwAB/wMAAf8DAKH/AwAB/wMAAf8DAAH/AwAB//8A/wD/AP8ARAADIQEwA1EB3wMAAf8DAKH/
-        AwAB/wMAAf8DWQHP/wD/AP8A/wBMAAMqAUADUQHfAwCh/wMAAf8DWAHAAxcBIP8A/wD/AP8AUAADIQEw
+        /wA/AAH/AwAB/wMAAf8DAKH/AwAB/wMAAf8DAAH/AwAB//8A/wD/AP8ARAADIQEwA1QB3wMAAf8DAKH/
+        AwAB/wMAAf8DWQHP/wD/AP8A/wBMAAMqAUADVAHfAwCh/wMAAf8DWAHAAxcBIP8A/wD/AP8AUAADIQEw
         AwCh/wNZAc8DFwEg/wD/AP8A/wBfAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/
         AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/
         AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/
-        /wD/AP8A/wBkAAMhATADUQHfAwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMA
+        /wD/AP8A/wBkAAMhATADVAHfAwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMA
         Af8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMA
         Af8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/A1kBz/8A/wD/AP8AbAADKgFA
-        A1EB3wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/
+        A1QB3wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/
         AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/
         AwAB/wMAAf8DAAH/AwAB/wMAAf8DWAHAAxcBIP8A/wD/AP8AcAADIQEwAwAB/wMAAf8DAAH/AwAB/wMA
         Af8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMA
         Af8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/A1kBzwMX
         ASD/AP8A/wD/AH8AAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMA
         Af8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMA
-        Af8DAAH/AwAB/wMAAf8DAAH//wD/AP8A/wCEAAMhATADUQHfAwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/
+        Af8DAAH/AwAB/wMAAf8DAAH//wD/AP8A/wCEAAMhATADVAHfAwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/
         AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/
-        AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wNZAc//AP8A/wD/AIwAAyoBQANRAd8DAAH/AwAB/wMA
+        AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wNZAc//AP8A/wD/AIwAAyoBQANUAd8DAAH/AwAB/wMA
         Af8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMA
         Af8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wNYAcADFwEg/wD/AP8A/wCQAAMhATADAAH/
         AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/
         AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/A1kBzwMXASD/AP8A/wD/AJ8AAf8DAAH/
         AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/
-        AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB//8A/wD/AP8ApAADIQEwA1EB3wMAAf8DAAH/AwAB/wMA
+        AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB//8A/wD/AP8ApAADIQEwA1QB3wMAAf8DAAH/AwAB/wMA
         Af8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMA
-        Af8DAAH/A1kBz/8A/wD/AP8ArAADKgFAA1EB3wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/
+        Af8DAAH/A1kBz/8A/wD/AP8ArAADKgFAA1QB3wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/
         AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wNYAcADFwEg/wD/AP8A/wCwAAMh
         ATADAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMA
         Af8DAAH/AwAB/wNZAc8DFwEg/wD/AP8A/wC/AAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMA
-        Af8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH//wD/AP8A/wDEAAMhATADUQHfAwAB/wMAAf8DAAH/
-        AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/A1kBz/8A/wD/AP8AzAADKgFAA1EB3wMA
+        Af8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH//wD/AP8A/wDEAAMhATADVAHfAwAB/wMAAf8DAAH/
+        AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/A1kBz/8A/wD/AP8AzAADKgFAA1QB3wMA
         Af8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DWAHAAxcBIP8A/wD/AP8A0AADIQEw
         AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/A1kBzwMXASD/AP8A/wD/AN8AAf8DAAH/
-        AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH//wD/AP8A/wDkAAMhATADUQHfAwAB/wMAAf8DAAH/AwAB/wNZ
-        Ac//AP8A/wD/AOwAAyoBQANRAd8DAAH/AwAB/wNYAcADFwEg/wD/AP8A/wDwAAMhATADAAH/A1kBzwMX
+        AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH//wD/AP8A/wDkAAMhATADVAHfAwAB/wMAAf8DAAH/AwAB/wNZ
+        Ac//AP8A/wD/AOwAAyoBQANUAd8DAAH/AwAB/wNYAcADFwEg/wD/AP8A/wDwAAMhATADAAH/A1kBzwMX
         ASD/AP8A/wD/AP8A/wD/AP8A/wBdAAFCAU0BPgcAAT4DAAEoAwABQAEBAgABUAMAAQEBAAEBBQABgAEM
         FgAD/wEACv8eAAX/AT8E/x4ABP8B/gEfBP8eAAT/AfwBDwT/HgAE/wH4AQcE/x4ABP8B8AEDBP8eAAT/
         AeABAQT/HgAE/wHAAQAE/x4ABP8BgAEAAX8D/x4ABP8CAAE/A/8eAAP/Af4CAAEfA/8eAAP/AfwCAAEP
@@ -308,15 +308,28 @@
   <data name="tsbCloseThisTab.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAH3SURBVDhPnZHda9NQGIeHIBT/BZGCetMVKTLxZtrQC7dZ
-        ppbNdVmzpfbDbtb1Y2tp6VZb9ULBv8T/RfFqgiBSxIuhw+narR9pk8eTLLWMdoo+EHhzTp5fzvuesX+F
-        ROKcXQ5j5HJOo1Bw269DdNS4u60omWYw5LWXBpgyxS2MQgkjmx0K6aiqux2J01lLchCYf133B1z21kCm
-        8gxDPPpGnk4y+TvEksNRuqkMlCuY9f707QzV6hnrA1E4PgXmdWPrCbx8hV4q0320jnlkS1YjaOtpEPut
-        cISd8fEeExNnLbkP4arj4+N0T88X4fkLerkC7Wic1soDtGQKSttWbco1SXLY2kkIhx0fYoleN5UV7TyF
-        7YoQy1As0VpW/yz3MUPeS5JOSbSjqCArkC/wTqz9VTZpyKq7payAuA2CS3B/EbKb/Jya4fvk5KlXbNGQ
-        ZXcztIwWX4XNvBBzkBbtiAG2FhbZvymx6/GMDrHkJQUtlgBxjU05ZPX85oZXP7wTgNU1ju4G2Lt2nV2X
-        62SIJYtetehD8dcNmuLo/YGZj1nXb01DNMbhjJ+vVzx8vnBpENKYm/MdBWW0SIzmgjw07ZrzOORA8tH0
-        z/LNc5Uv550+e/uYH1N+X332Hm+9o6ddczodOxcv90bKffa8Xt8ouY8Zcqr8f4yN/QJF6kaFZl0JeQAA
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAH3SURBVDhPnZFda9NQGMeLIAS/gkhAvemClDHxZpqQC7dZ
+        5laq67JmS+yL3azry9aSkq226oWCn8TPonhXEEQo4sXQ4XTtlrRpkr/nZMnKaKfoDwJPzsnvn/M8J/Sv
+        IJe75JejuJUK62oa57+O0FeyXE+WS0YiyftLQ6iM2g5cTYdbLo+E9BWF66Wy6G/kcRh78LYTjYX9raGM
+        xgu45HG2qujn86chnqymMSiUgHoDtD6YvVdCs3nB+4AUzOfFuOPuPANev4Gj1zF4sgl6ZE9WUrA2iwDZ
+        N9UUWhMTNqamLnpyANQm8+lp0XaqNeDlK9gVDb10FubaI1j5AqDvejWV24LA+NpZoKrMx0zOHhTKpJ3n
+        wG6DiHWgpsNcVf4sB9CQliA40Ek7sgJIMlDV8IGs/VWmdCWFM+U1gNwGEivAw2WgvI1fM3P4MT197hV7
+        dCWJM5KrsLLrwHaViBWgSNohAzSXlnFwR8BeJDI+xJNXZFiZHECu0ZCSXs/vbvPO0f0YsL6B44UY9m/e
+        wl44fDbEk0mvVvox+esWDHL0YGD0oXXn7iyQzuBoLopvNyL4cuXaMKQbj4vHCQlWKgNjSRqZdps9CTkU
+        RBjReXyPTOLrZVb0t0/4ORMVO/OLeM+Pn3abZZnW1ev2WDlgn+fFcXIADTlX/j9Cod8xQkZ8v5/c3gAA
+        AABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="$this.TabIcon" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAACvAAAArwAUKsNJgAAAAHdElNRQfhCwMHDhoSBz4JAAABbElEQVQ4T52ToXbDMAxF
+        C/cbg4WD+4XCwtLCwcLSwsLC0sBAQ1PDQENTQ0NDTdeJeuK1G9g51UmtWNdPT85GRP6MXKpMqXRBzt53
+        m2uuUlKVutpw90neT2MXnxcv45TbnrlQC5LL4i9R/FlDnzkUEeX4mOXtOMjmMMj+FmR39W29PTmJuSwy
+        dfN4nGTYh+6JGt5zKoCkByHfIKhogDhmGXZBwjVJ1ZpwS22do6pYAaz3wz00wBDSD4AWIjtqO+7rWcGv
+        gOQVoLKtCE84HTW8XwOKJq0FZy0UdR/zDIKC9SQMQBHBfyYBrG0gKKAVM7H5sUAM8HF2LYBs9fmYwjry
+        VMSdZgitkXvyQMfZeUDRNCShFfqe7vMUyL0EvJyCnsh9+B9ATQNAAe5zEwEAXgO4SAbYdC1QtExhPMzB
+        mpFy28z586g5ldgAumacDUCwGSWcinntEumPj8ncxzxUXF1s6w7wiKayz9G7RZ+r8g3UZgVxKqVuvgAA
         AABJRU5ErkJggg==
 </value>
   </data>
